Fix some layout issues seen on ownCloud
- The playlist "Sort ..." item and the related submenu were not laid out
  quite correctly on ownCloud

- The "Details" and "Remove" action buttons after a playlist track and
  radio station were laid out too tightly on ownCloud. Now they are
  always laid out as sparsely as previously on NC21. Also older versions
  of NC (tested 17) had somewhat tighter grouping than NC21 but the
  problem was not as bad there as with OC.

--- a/css/style-navigation.css
+++ b/css/style-navigation.css
@@ -168,11 +168,16 @@
 
 #app-navigation .item-with-actions .actions .popovermenu ul a {
 	background-position: 10px center;
+	background-size: 16px;
 	opacity: .7;
 }
 
 #app-navigation .item-with-actions .actions .popovermenu ul a:hover {
 	opacity: 1.0;
+}
+
+#app-navigation .popovermenu.submenu a {
+	padding-left: 0;
 }
 
 #app-navigation .popovermenu.submenu span {
